--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,9 @@
 server.port = 8081
 
-myconfig.properties.name=OK
-myconfig.properties.pass=NG
+myconfig.properties.name=name
+myconfig.properties.pass=pass
+
+spring.datasource.url=jdbc:mysql://localhost:3306/test
+spring.datasource.username=root
+spring.datasource.password=
+spring.datasource.driverClassName=com.mysql.jdbc.Driver
