--- a/build.gradle
+++ b/build.gradle
@@ -24,15 +24,24 @@ repositories {
 }
 
 configurations {
+	provided
 	providedRuntime
+	runtime
 }
 
 dependencies {
 	compile('org.springframework.boot:spring-boot-configuration-processor')
-	compile('org.springframework.boot:spring-boot-devtools')
+	runtime('org.springframework.boot:spring-boot-devtools')
+
 	compile('org.springframework.boot:spring-boot-starter-thymeleaf')
 	compile('org.springframework.boot:spring-boot-starter-web')
 	compile('nz.net.ultraq.thymeleaf:thymeleaf-layout-dialect')
+
+	compile("org.springframework.boot:spring-boot-starter-data-jpa")
+	compile('org.springframework.boot:spring-boot-starter-jdbc')
+	runtime('mysql:mysql-connector-java')
+
+	provided('org.projectlombok:lombok')
 	providedRuntime('org.springframework.boot:spring-boot-starter-tomcat')
 	testCompile('org.springframework.boot:spring-boot-starter-test')
 }
